Update documentation and rename memory-tests